--- a/src/main/resources/static/global.css
+++ b/src/main/resources/static/global.css
@@ -121,6 +121,13 @@
   color: #4b5966;
 }
 
+.title_textfield_size_m {
+  gap: 4px;
+  padding: 8px 16px;
+  width: 680px;
+  height: 50px;
+}
+
 .input_textfield {
   height: 100%;
   font-weight: 400;
