--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,14 +12,14 @@
       <header class="header">
         <a href="/"><img src="./img/signiture.svg" /></a>
         <ul class="header__menu">
-          <!-- target -->
+          <!-- target user -->
           <li class="header__menu__item" >
             <a class="btn btn_contained btn_size_s" href="/login"> 로그인 </a>
           </li >
           <li class="header__menu__item">
             <a class="btn btn_ghost btn_size_s" href="/registration">회원 가입</a>
           </li>
-          <!-- end -->
+          <!-- end user -->
         </ul>
       </header>
       <div class="wrapper">
@@ -47,6 +47,7 @@
             </button>
           </div>
           <p class="post__article">
+            <!-- target article -->
             우리는 시스템 아키텍처에 대한 일관성 있는 접근이 필요하며, 필요한
             모든 측면은 이미 개별적으로 인식되고 있다고 생각합니다. 즉, 응답이
             잘 되고, 탄력적이며 유연하고 메시지 기반으로 동작하는 시스템 입니다.
@@ -57,6 +58,7 @@
             비록 장애가 발생 하더라도, 재난이 일어나기 보다는 간결한 방식으로
             해결합니다. 리액티브 시스템은 높은 응답성을 가지며 사용자 에게
             효과적인 상호적 피드백을 제공합니다.
+            <!-- end article -->
           </p>
         </div>
         <ul class="comment">
@@ -128,6 +130,9 @@
                 />
                 이전 글
               </a>
+            </li>
+            <li class="nav__menu__item">
+              <a class="btn btn_contained btn_size_s" href="/article">글쓰기</a>
             </li>
             <li class="nav__menu__item">
               <a class="btn btn_ghost btn_size_m">댓글 작성</a>
