feat: DynamicHtmlProcessor 기능 추가
- 사용자의 최근 게시물에서 이미지를 불러올 수 있다

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,9 @@
             <img class="post__account__img" />
             <p class="post__account__nickname">account</p>
           </div>
+          <!-- target photo -->
           <img class="post__img" />
+          <!-- end photo -->
           <div class="post__menu">
             <ul class="post__menu__personal">
               <li>
